--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,19 +3,25 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
-        applicationId "com.example.davaodemo"
-        minSdkVersion 16
+        applicationId "com.careagriculture.animaldispersal"
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix '.debug'
+        }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
     }
 }
 
@@ -29,10 +35,9 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.code.ndef-tools-for-android:ndeftools:1.2.4'
     compile 'com.google.code.ndef-tools-for-android:ndeftools-util:1.2.4'
-    // Stetho core
+    //TODO Stetho core
     compile 'com.facebook.stetho:stetho:1.3.1'
     //Optional network helper
     compile 'com.facebook.stetho:stetho-okhttp:1.3.1'
     compile 'com.bugfender.sdk:android:0.+'
-
 }
