--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.davaodemo">
+    package="com.example.davaodemo" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,62 +10,71 @@
         android:name="android.hardware.nfc"
         android:required="true" />
 
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:anyDensity="true"
+        />
+
     <application
         android:name="com.example.animaldispersal.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="com.example.animaldispersal.MainActivity">
+        android:theme="@style/AppTheme" >
 
-            <!-- android:configChanges="keyboardHidden|screenSize" -->
+        <activity android:name="com.example.animaldispersal.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:scheme="vnd.android.nfc" />
             </intent-filter>
-
-            <meta-data
+            <!--meta-data
                 android:name="android.app.default_searchable"
-                android:value="com.example.animaldispersal.SearchActivity" />
+                android:value="com.example.animaldispersal.SearchActivity" /-->
         </activity>
+        <receiver
+            android:name="com.example.animaldispersal.utils.NetworkStateChangeReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
         <activity
             android:name="com.example.animaldispersal.AnimalDetailActivity"
-            android:label="Add An Animal">
+            android:label="@string/add_an_animal"
+            android:windowSoftInputMode="stateHidden"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:scheme="vnd.android.nfc" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.example.animaldispersal.EventDetailActivity"
-            android:label="Add An Event"
+            android:label="@string/add_an_event"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.example.animaldispersal.SearchActivity"
-            android:label="Search Results">
+            android:launchMode="singleTop"
+            android:label="@string/search_results" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name="com.example.animaldispersal.AndroidDatabaseManager" />
         <activity android:name="com.example.animaldispersal.RegisterActivity" />
-        <activity android:name="com.example.animaldispersal.SettingsActivity"></activity>
+        <activity android:name="com.example.animaldispersal.SettingsActivity" />
     </application>
 
 </manifest>
